[gd_scene load_steps=6 format=3 uid="uid://4hcwh21chahv"]

[ext_resource type="FontFile" uid="uid://cbhh37to6jjdh" path="res://Art/Fonts/Silkscreen/Silkscreen-Bold.ttf" id="1_6w7iq"]
[ext_resource type="Script" path="res://UiScenes/game_over_screen.gd" id="1_rq135"]
[ext_resource type="Texture2D" uid="uid://bqugv11mytxi7" path="res://Art/UI/Button.png" id="2_mnu4x"]
[ext_resource type="Texture2D" uid="uid://c638qxi6elky0" path="res://Art/UI/ButtonPressed.png" id="3_cpel6"]
[ext_resource type="FontFile" uid="uid://5dp2m40qp7cv" path="res://Art/Fonts/Silkscreen/Silkscreen-Regular.ttf" id="4_7diei"]

[node name="GameOverScreen" type="Control" groups=["GameOver"]]
top_level = true
z_index = 15
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rq135")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 0.498039)

[node name="MainMenuButton" type="TextureButton" parent="ColorRect"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 114.0
offset_right = 750.0
offset_bottom = 594.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.3)
texture_normal = ExtResource("2_mnu4x")
texture_hover = ExtResource("3_cpel6")

[node name="Label" type="Label" parent="ColorRect/MainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -38.5
offset_right = 90.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_7diei")
theme_override_font_sizes/font_size = 110
text = "Main Menu"

[node name="PlayAgainButton" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -54.0
offset_right = 750.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.3)
texture_normal = ExtResource("2_mnu4x")
texture_hover = ExtResource("3_cpel6")

[node name="Label" type="Label" parent="ColorRect/PlayAgainButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -38.5
offset_right = 90.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_7diei")
theme_override_font_sizes/font_size = 105
text = "Play Again"

[node name="QuitButton" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 280.0
offset_right = 750.0
offset_bottom = 760.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.3)
texture_normal = ExtResource("2_mnu4x")
texture_hover = ExtResource("3_cpel6")

[node name="Label" type="Label" parent="ColorRect/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -38.5
offset_right = 90.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_7diei")
theme_override_font_sizes/font_size = 130
text = "Quit"

[node name="TotalScoreTextLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 71.0
offset_right = 350.0
offset_bottom = 174.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_6w7iq")
theme_override_font_sizes/font_size = 100
text = "TOTAL SCORE"

[node name="TotalScoreValueLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.0
offset_top = 189.0
offset_right = 345.0
offset_bottom = 292.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_7diei")
theme_override_font_sizes/font_size = 90
text = "100000"
horizontal_alignment = 1

[node name="CrazyLabel" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.0
offset_top = 283.0
offset_right = 345.0
offset_bottom = 386.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.556863, 0, 1)
theme_override_fonts/font = ExtResource("4_7diei")
theme_override_font_sizes/font_size = 60
text = "(Crazy)"
horizontal_alignment = 1

[connection signal="pressed" from="ColorRect/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="ColorRect/QuitButton" to="." method="_on_quit_button_pressed"]
